fix tooltip alignment

--- a/src/main.css
+++ b/src/main.css
@@ -56,6 +56,10 @@ body {
   grid-column-end: 3;
 }
 
+#district-choice {
+  autocomplete: 'on';
+}
+
 #bottom-panel {
   display: flex;
   flex-direction: column;
